# chimerax-remotebrowser

./: README.md  bundle_info.xml  pyproject.toml
src/: __init__.py  fetch.py  tool.py
src/conn/: connector.py  s3fs_connector.py  sshfs_connector.py
src/misc/: env.py  settings.py  util.py
src/ui/: QFSSpecModel.py  main_widget.py  s3fs_widgets.py  sshfs_widgets.py  util.py
